--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     let stemCellModel;
     const loader = new THREE.GLTFLoader();
     loader.load(
-      '../cell_gltf/scene.gltf',
+      'cell_gltf/scene.gltf',
       function (gltf) {
         stemCellModel = gltf.scene;
         // Scale and position the model (much bigger)
